--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body
 {
     background-color: #222;
-    background: url("images/SaMe.gif");
+    background: url("SaMe.gif");
     background-size: cover;
 }
 .card
